# autoconf-base64

./: Makefile.in  b64.c  configure.ac
compat/: b64_pton.c
